[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "CodingRiderImproved"
version = "0.0.1"
description = "CodingRider but improved!"
readme = "README.md"
license.file = "LICENSE"
dependencies = [
    "colorama",
    "pyserial",
]

[project.urls]
Homepage = "https://github.com/Ria424/CodingRiderImproved"

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["."]  # ["."] by default
include = ["CodingRiderImproved*"]  # ["*"] by default
exclude = ["CodingRiderImproved.tests*"]  # empty by default
namespaces = false  # true by default