[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "CodingRiderImproved"
version = "0.0.3"
description = "CodingRider but improved!"
readme = "README.md"
license.file = "LICENSE"
dependencies = [
    "colorama",
    "pyserial",
]

[project.urls]
Homepage = "https://github.com/Ria424/CodingRiderImproved"

[tool.setuptools.packages.find]
include = ["CodingRiderImproved*"]
namespaces = false